Switch order of login button and nnavigation menu in mobile.  Change button font size.  Fix spacing in mobile header.

--- a/wp-content/themes/custom/style.css
+++ b/wp-content/themes/custom/style.css
@@ -3265,7 +3265,7 @@ button.close {
   padding: 4px 12px;
   margin-bottom: 0;
   *margin-left: .3em;
-  font-size: 14px;
+  font-size: 1em;
   line-height: 20px;
   color: #333333;
   text-align: center;
@@ -9201,6 +9201,13 @@ content: '';
   vertical-align: middle;
 }
 
+.login-button {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+/* responsive calendar / tables */
+
 @media 
 only screen and (max-width: 760px),
 (min-device-width: 768px) and (max-device-width: 1024px)  {
@@ -9506,6 +9513,9 @@ only screen and (max-width: 760px),
 /* Responsive navigation */
 
 @media all and (max-width: 800px), only screen and (-webkit-min-device-pixel-ratio: 2) and (max-width: 1024px), only screen and (min--moz-device-pixel-ratio: 2) and (max-width: 1024px), only screen and (-o-min-device-pixel-ratio: 2/1) and (max-width: 1024px), only screen and (min-device-pixel-ratio: 2) and (max-width: 1024px), only screen and (min-resolution: 192dpi) and (max-width: 1024px), only screen and (min-resolution: 2dppx) and (max-width: 1024px) {
+  /* container */
+  /* allows cssmenu to switch places with login/logout button in mobile */
+
   /* drop down menu when you press the button */
   #cssmenu > ul {
     max-height: 0;
@@ -9641,15 +9651,44 @@ only screen and (max-width: 760px),
     top: 26px;
   }
   #access {
+    width: 100%;
     display: block;
+    -webkit-box-ordinal-group: 2;
+    -moz-box-ordinal-group: 2;
+    -ms-flex-order: 2;
+    -webkit-order: 2;
+    order: 2;
   }
 
   #header {
     text-align: left;
     width: auto;
+    padding-top: 20px;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -moz-box-orient: vertical;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    /* optional */
+    -webkit-box-align: start;
+    -moz-box-align: start;
+    -ms-flex-align: start;
+    -webkit-align-items: flex-start;
+    align-items: flex-start;
   }
 
-  #crest {
-    padding-bottom: 10px;
+/* allows cssmenu to switch places with login/logout button in mobile */
+  .login-button {
+    -webkit-box-ordinal-group: 1;
+    -moz-box-ordinal-group: 1;
+    -ms-flex-order: 1;
+    -webkit-order: 1;
+    order: 1;
+    padding-bottom: 15px;
   }
 }
